# Qik

./: Cargo.toml
src/: actions.rs  main.rs  theme.rs
src/ui/: bottom_panel.rs  command_palette.rs  editor.rs  icons.rs  mod.rs  search_view.rs  sidebar.rs  workspace.rs
