[package]
name = "qik"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ropey = "1.6"
syntect = "5.2"
walkdir = "2.5"
itertools = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
